# open-ai-utils

./: Cargo.toml
open-ai-macros-tests/: Cargo.toml
open-ai-macros-tests/src/: lib.rs  model_with_no_required.rs  tests.rs
open-ai-tests/: Cargo.toml
open-ai-tests/src/: tests.rs
open-ai-utils/: Cargo.toml
open-ai-utils/src/: function_type_description.rs  gpt4_settings.rs  gpt5_settings.rs  lib.rs  llm_model.rs  qwen_settings.rs  request_builder.rs
open-ai-utils/src/function_type_descriptions/: function_tool_call_description.rs  function_type_description.rs  mod.rs  opt_of.rs  opt_of_vec.rs  tp.rs  vec_of.rs
open-ai-utils/src/http_chunked_body_reader/: http_chunked_body_reader.rs
open-ai-utils/src/my_auto_gen/: auto_gen_settings.rs  exec_tool_call.rs  local_tool_functions.rs  mod.rs  my_auto_gen.rs  my_auto_gen_inner.rs  open_ai_resp_model.rs  remote_tool_function.rs  tech_request_log.rs  test.json  tool_function.rs  tool_functions.rs
open-ai-utils/src/my_auto_gen/argentic_response/: execute_fl_url_request.rs  mod.rs  models.rs
open-ai-utils/src/my_auto_gen/mock_data/: mock_data.json  mock_data.rs  mod.rs
open-ai-utils/src/my_auto_gen/response_as_stream/: execute_request_as_stream.rs  inner_response_stream.rs  mod.rs  open_ai_network_stream.rs  open_ai_stream_chunk.rs  stream_model.rs  (+2 more)
open-ai-utils/src/open_ai_tools_model/: mod.rs
open-ai-utils/src/request_builder/: gpt5_settings.rs  llm_model.rs  mod.rs  models.rs  other_request_data.rs  request_builder.rs  request_builder_inner.rs  roles.rs
open-ai-utils/src/tool_calls_types/: mod.rs  range_value.rs
(+13 files in other folders)
