[package]
name = "open-ai-tests"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
async-trait = "*"
open-ai-macros = { path = "../open-ai-macros" }
open-ai-utils = { path = "../open-ai-utils" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
