[package]
name = "open-ai-utils"
version = "0.1.1"
edition = "2024"

[dependencies]
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "base64",
] }

flurl = { tag = "0.6.1", git = "https://github.com/MyJetTools/fl-url.git" }

serde = { version = "*", features = ["derive"] }
serde_json = "*"
open-ai-macros = { path = "../open-ai-macros" }

async-trait = "*"
tokio = { version = "*" }
